--- a/src/app/features/booking-form/ticket-details/ticket-details.component.html
+++ b/src/app/features/booking-form/ticket-details/ticket-details.component.html
@@ -32,13 +32,13 @@
 
       <div class="detail-row">
         <span class="detail-label">{{ 'ticket.hours' | translate }}</span>
-        <span class="detail-value">{{ ticket.hours || 'N/A' }}</span>
+        <span class="detail-value">{{ formatNumber(ticket.hours) || 'N/A' }}</span>
       </div>
 
       <div class="detail-row highlight">
         <span class="detail-label">{{ 'ticket.totalPrice' | translate }}</span>
         <span class="detail-value price"
-          >{{ ticket.totalPrice }} {{ 'booking.sar' | translate }}</span
+          >{{ formatNumber(ticket.totalPrice) }} {{ 'booking.sar' | translate }}</span
         >
       </div>
     </div>
